<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Happy">Happy</string>
    <string name="Sad">Sad</string>
    <string name="Excited">Excited</string>
    <string name="Angry">Angry</string>
    <string name="Shy">Shy</string>
    <string name="Sick">Sick</string>
    <string name="String">How do you feel?</string>

</resources>